[package]
name = "maps"
version = "0.1.0"
authors = ["Andrew Oatley-Willis <oatleywillisa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
ncurses = "5.99.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.2.1"
flate2 = "1.0"
